force-app/main/default/objects/ContentVersion/fields/gnx__Context_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Context_id__c</fullName>
    <label>Context id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>