force-app/main/default/objects/ContentVersion/fields/gnx__Context_object_API_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Context_object_API_name__c</fullName>
    <label>Context object API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>