force-app/main/default/objects/ContentVersion/fields/gnx__Delivery_error__c.field-meta.xml
<CustomField>
    <fullName>gnx__Delivery_error__c</fullName>
    <description>Message d&apos;erreur retourné par yousign lors de l&apos;envoi pour signature.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>