force-app/main/default/objects/ContentVersion/fields/gnx__Document_template_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Document_template_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document template Id</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>