force-app/main/default/objects/ContentVersion/fields/gnx__Path_on_remote_storage__c.field-meta.xml
<CustomField>
    <fullName>gnx__Path_on_remote_storage__c</fullName>
    <label>Path on remote storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>