force-app/main/default/objects/ContentVersion/fields/gnx__Template_content_version_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Template_content_version_id__c</fullName>
    <label>Template content version id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>